Main - create 2 template frags to be added into main

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,12 +2,14 @@
     <string name="app_name">LeafPicClone</string>
 
     <!--ERROR-->
-    <string name="storage_permission_denied">Permission to access storage was denied!\n I\'m not able to get your images!</string>
+    <string name="storage_permission_denied">Permission to access storage was denied!\n I\'m not
+        able to get your images!
+    </string>
 
     <!--EASTER EGG-->
     <string name="emoji_easter_egg">¯\\_(ツ)_/¯</string>
-    <string name="easter_egg_enable">Enabled Easter Egg: </string>
-    <string name="easter_egg_disable">Disabled Easter Egg: </string>
+    <string name="easter_egg_enable">Enabled Easter Egg:</string>
+    <string name="easter_egg_disable">Disabled Easter Egg:</string>
 
     <!-- RANDOM -->
     <string name="album">Album</string>
@@ -18,4 +20,7 @@
     <string name="install_shortcut">Install shortcut</string>
     <string name="landscape">Landscape</string>
     <string name="portrait">Portrait</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
