--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,8 +15,8 @@
 
     <!--EASTER EGG-->
     <string name="emoji_easter_egg">¯\\_(ツ)_/¯</string>
-    <string name="easter_egg_enable">Enabled Easter Egg: </string>
-    <string name="easter_egg_disable">Disabled Easter Egg: </string>
+    <string name="easter_egg_enable">Enabled Easter Egg:</string>
+    <string name="easter_egg_disable">Disabled Easter Egg:</string>
 
     <!--FINGER PRINT-->
     <string name="fp_not_supported">Sorry, fingerprint authentication not supported.</string>
@@ -90,14 +90,19 @@
     <!--DIALOG MESSAGES-->
     <string name="hide_album_message">
         Hiding this album will create a .nomedia file in the folder
-        and this could make the media inaccessible from other apps. Use the exclude option to avoid this.
+        and this could make the media inaccessible from other apps. Use the exclude option to avoid
+        this.
     </string>
     <string name="delete_album_message">Are you sure you want to delete this album?</string>
-    <string name="delete_albums_message">Are you sure you want to delete the all selected albums?</string>
+    <string name="delete_albums_message">Are you sure you want to delete the all selected albums?
+    </string>
     <string name="delete_photo_message">Are you sure you want to delete this media?</string>
-    <string name="delete_photos_message">Are you sure you want to delete all the selected media?</string>
+    <string name="delete_photos_message">Are you sure you want to delete all the selected media?
+    </string>
     <string name="hide_albums_message">Are you sure you want to hide the selected albums?</string>
-    <string name="unhide_album_message">Un-hiding this album you will also make the media available for other apps.</string>
+    <string name="unhide_album_message">Un-hiding this album you will also make the media available
+        for other apps.
+    </string>
 
     <string name="new_folder_message">The new folder will be created in the current path, and
         then the media will be copied or moved in the new folder.
@@ -166,7 +171,9 @@
 
     <string name="type_password">Insert password</string>
     <string name="security_sub">Set up a password to protect your media.</string>
-    <string name="remember_password_message">Note: password changed, if you forget it you will have to clear application data.</string>
+    <string name="remember_password_message">Note: password changed, if you forget it you will have
+        to clear application data.
+    </string>
 
     <string name="apply_password_on">Use password for</string>
 
@@ -179,9 +186,11 @@
 
     <string name="general">General</string>
     <string name="auto_update_media">Auto update media</string>
-    <string name="auto_update_media_sub">You should disable if there are a large number of images.</string>
+    <string name="auto_update_media_sub">You should disable if there are a large number of images.
+    </string>
     <string name="traslucent_statusbar">Translucent Status Bar</string>
-    <string name="traslucent_statusbar_sub">Apply a darker primary color to the notification bar.</string>
+    <string name="traslucent_statusbar_sub">Apply a darker primary color to the notification bar.
+    </string>
     <string name="option_show_tips">Show Tips</string>
     <string name="option_show_tips_sub">It help you to understand the use of some feature.</string>
 
@@ -207,16 +216,22 @@
     <string name="delay_load_full_size_image">Delay loading of full-size images</string>
     <string name="load_full_image_when_zoom_in">Load full image when zoomed in</string>
     <string name="media_viewer_swipe_direction">Swipe Direction</string>
-    <string name="media_viewer_swipe_direction_sub">Change the swipe direction of the media viewer.(Default: Left to Right)</string>
+    <string name="media_viewer_swipe_direction_sub">Change the swipe direction of the media
+        viewer.(Default: Left to Right)
+    </string>
 
     <string name="video_instant_play">Instant Play</string>
-    <string name="video_instant_play_sub">It allows you to instantlly play the video, skipping the preview.</string>
+    <string name="video_instant_play_sub">It allows you to instantlly play the video, skipping the
+        preview.
+    </string>
 
     <string name="theme">Theme</string>
     <string name="primary_color">Primary Color</string>
     <string name="primary_color_sub">The main color to be used in the UI.</string>
     <string name="accent_color">Accent Color</string>
-    <string name="accent_color_sub">The secondary color which is used to tint widgets and UI details.</string>
+    <string name="accent_color_sub">The secondary color which is used to tint widgets and UI
+        details.
+    </string>
     <string name="base_theme">Base Theme</string>
     <string name="base_theme_sub">Select a base theme.</string>
     <string name="white">White</string>
@@ -246,13 +261,14 @@
     <string name="coming_soon">Coming Soon!</string>
     <string name="google_takes">Google takes 30% off every donation.</string>
     <string name="paypal_text">PayPal.Me allows you to send us money in seconds without charges,
-        if you use a credit card PayPal takes 4% of donations and a standard fee of 0.35€ </string>
+        if you use a credit card PayPal takes 4% of donations and a standard fee of 0.35€
+    </string>
 
     <!--ABOUT STRINGS-->
     <string name="about">About</string>
     <string name="about_version">Version</string>
 
-    <string name="about_license"> License</string>
+    <string name="about_license">License</string>
     <string name="about_license_sub">Check GPLv3 license terms used on LeafPic.</string>
 
     <string name="about_library_license">Library Licenses</string>
@@ -274,7 +290,8 @@
     <string name="send_mail_error">There are no email clients installed.</string>
     <string name="about_special_thanks">Special thanks</string>
     <string name="about_special_thanks_patryk_goworowski_sub">to <a
-        href="https://plus.google.com/109304801957014561872/about">Patryk Goworowski</a> for the
+        href="https://plus.google.com/109304801957014561872/about">Patryk Goworowski
+    </a> for the
         awesome icon.
     </string>
     <string name="about_special_thanks_members_sub">
@@ -285,14 +302,17 @@
     </string>
 
     <!--FINGERPRINT-->
-    <string name="fingerprint_instruction">Place your fingertip on the Home button to verify your identity</string>
+    <string name="fingerprint_instruction">Place your fingertip on the Home button to verify your
+        identity
+    </string>
     <string name="fingerprint_instruction_short">Use Fingerprint</string>
     <string name="fingerprint_alt_mode">Or use password</string>
     <string name="fingerprint_error">Fingerprint Error</string>
 
     <string name="about_support">Support Development</string>
     <string name="about_support_translate">Translate</string>
-    <string name="about_support_translate_sub">Help us to translate LeafPic in more languages.</string>
+    <string name="about_support_translate_sub">Help us to translate LeafPic in more languages.
+    </string>
 
     <string name="about_support_report_bug">Report bug</string>
     <string name="about_support_report_bug_sub">Report bug or request new features.</string>
@@ -301,7 +321,8 @@
     <string name="about_support_rate_sub">Leave us a positive rating if you like LeafPic.</string>
 
     <string name="about_support_github">GitHub</string>
-    <string name="about_support_github_sub">Fork the repo and push changes or submit new issues.</string>
+    <string name="about_support_github_sub">Fork the repo and push changes or submit new issues.
+    </string>
 
     <!--PHOTO DETAILS-->
     <string name="path">Path</string>
@@ -332,10 +353,15 @@
     <string name="off">off</string>
 
     <!-- ERRORS -->
-    <string name="error_drm_not_supported">Protected content is supported on Android 4.3 or later</string>
-    <string name="error_drm_unsupported_scheme">This device does not support the required DRM scheme</string>
+    <string name="error_drm_not_supported">Protected content is supported on Android 4.3 or later
+    </string>
+    <string name="error_drm_unsupported_scheme">This device does not support the required DRM
+        scheme
+    </string>
     <string name="error_drm_unknown">An unknown DRM error occurred</string>
-    <string name="storage_permission_denied">Permission to access storage was denied!\n I\'m not able to get your images!</string>
+    <string name="storage_permission_denied">Permission to access storage was denied!\n I\'m not
+        able to get your images!
+    </string>
     <string name="error_querying_decoders">Unable to query device decoders</string>
     <string name="unable_to_fix_date">Unable to fix date</string>
     <string name="compression_settings">Compression settings</string>
@@ -358,7 +384,8 @@
     <string name="got_permission_wr_sdcard">Obtained permission to write on the SD-Card.</string>
     <string name="use_mediastore_provider">Alternative media provider</string>
     <string name="use_media_store_sub">If you miss some folders or if you have any issue
-        with the albums enable this option</string>
+        with the albums enable this option
+    </string>
     <string name="multi_column">Multi column</string>
     <string name="multi_column_sub">Chose how many columns you want for your folders and media
     </string>
@@ -372,7 +399,8 @@
         (TESTING) It allows you to have a better zoom management and a clear image but it isn\'t
         really optimized right now
     </string>
-    <string name="error_contact_developer">Something went wrong, please contact the developer,</string>
+    <string name="error_contact_developer">Something went wrong, please contact the developer,
+    </string>
     <string name="chose_folders">Chose Folders</string>
     <string name="internal_storage">Internal Storage</string>
     <string name="extrnal_storage">External Storage</string>
@@ -383,16 +411,23 @@
     <string name="exclude">Exclude</string>
     <string name="exclude_albums_message">Are you sure you want to exclude the selected
         albums?\nIf you want to exclude the parent of these albums, keep in mind that selecting
-        one album a dropdown will appear allow you to select the parent of the folder.</string>
+        one album a dropdown will appear allow you to select the parent of the folder.
+    </string>
     <string name="exclude_album_message">
         By excluding this folder you will also exclude all sub-folders. Below you can find a list
-        that allows you to choose a parent, if you have to exclude more folders which are on the same level.
+        that allows you to choose a parent, if you have to exclude more folders which are on the
+        same level.
     </string>
     <string name="excluded_items">Excluded items</string>
     <string name="manage_your_folders">Manage your folders</string>
-    <string name="manage_your_folders_sub">Here can handle the excluded folders and include folders that don\'t show up</string>
-    <string name="white_list_explaination">You can add folders that are not listed or folders with some media missing.
-        White-listed folders will be scanned periodically when the device is in idle mode, so it won\'t cause any performance issue</string>
+    <string name="manage_your_folders_sub">Here can handle the excluded folders and include folders
+        that don\'t show up
+    </string>
+    <string name="white_list_explaination">You can add folders that are not listed or folders with
+        some media missing.
+        White-listed folders will be scanned periodically when the device is in idle mode, so it
+        won\'t cause any performance issue
+    </string>
     <string name="no_media_in_this_folder">No media in this folder</string>
     <string name="error_occured_open_media">An error occurred opening this media.</string>
     <string name="error_thumbnail">Unable to find a thumbnail for the album!</string>
